# elliptic

./: .gitmodules  Cargo.toml  README.md
curve25519-sys/: Cargo.toml  build.rs
curve25519-sys/src/: lib.rs
curve25519-sys/tests/: lib.rs
elliptic-sys/: Cargo.toml  README.md  build.rs
elliptic-sys/src/: lib.rs
elliptic-sys/tests/: lib.rs
src/: curve25519.rs  lib.rs
tests/: lib.rs
