[package]
name = "elliptic-sys"
version = "0.3.0"
authors = ["Jihyeok Seo <limeburst@member.fsf.org>"]
description = "FFI bindings for agl/curve25519-donna and trevp/ref10_extract."
repository = "https://github.com/lumi-im/elliptic"
license = "CC0-1.0"
build = "build.rs"

[build-dependencies]
gcc = "0.3.17"

[dependencies]
libc = "0.1.10"
